--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     padding: 0;
     background-color: rgb(15, 15, 15);
     font-family: sans-serif;
+
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -77,6 +79,7 @@ body {
     text-align: center;
     padding-top: 2vw;
     font-size: small;
+    
 
 }
 
@@ -84,6 +87,7 @@ body {
     background: linear-gradient(to right, rgb(255, 0, 128), rgb(242, 247, 0), rgb(0, 255, 0));
     height: 2px;
 }
+
 
 #red{
     color: rgba(255, 0, 221, 0.596);
@@ -199,7 +203,7 @@ input[type="text"]:focus {
 
 }
 
-button{
+#pass-button{
     padding: 10px;
     margin: 5px 0;
 
@@ -208,6 +212,98 @@ button{
     font-size: 16px;
     color: #002503;
 }
+
+#move{
+    display: flex;
+    transition: transform 0.3s ease-in-out;
+    transform: translateX(0%);
+    width: 200vw;
+}
+
+#works-button{
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    text-shadow: 0px 0px 2vw black;
+    background-color: rgb(8, 8, 8);
+    margin-top: 0;
+
+    margin-bottom: 40px;
+    background: linear-gradient(to right, hsla(330, 100%, 50%, 0.24), rgba(153, 0, 84, 0.308));
+    border: none;
+    box-shadow: 0px 0px 2vw rgba(255, 1, 141, 0.911);
+
+    width: 50%;
+    height: 60px;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    border-bottom-right-radius: 40px;
+    border-bottom-left-radius: 40px;
+}
+
+#main-page{
+    width: 100vw;
+}
+
+#works{
+    width: 100vw;
+    transform: translateX(100%);
+}
+
+.center-container{
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+
+
+/*WORKS--------------------------------------*/
+
+.work-1{
+    display: flex;
+    background-color: black;
+    padding: 20px;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 20px;
+}
+.work-1img{
+    width: 50%;
+    margin-right: 5%;
+}
+
+.work-1img img{
+    width: 100%;
+}
+
+.work-1text{
+    margin: 0;
+    color: white;
+    width: 50%;
+}
+
+.work-1text h2{
+    font-size: 190%;
+    padding-bottom: 2p;
+    border-bottom: white solid 0.5vw;
+}
+
+.work-1text p{
+    color: rgb(223, 223, 223);
+    font-weight: bold;
+}
+
+.bottom-text{
+    color: white;
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+
+
 
 @media screen and (min-width: 426px){
     .blank{
@@ -224,9 +320,70 @@ button{
     input[type="text"] {
         width: 30%;
     }
+
+    
 }
 
-@media screen and (min-width: 769px){
+@media screen and (max-width: 606px) {
+    .work-1text h2{
+        font-size: 150%;
+        
+    }
+    
+    .work-1text p{
+        font-size: 90%;
+    }
+
+    .bottom-text{
+        width: 90%;
+    }
+
+}
+
+@media screen and (max-width: 540px) {
+    .work-1text h2{
+        font-size: 120%;
+        
+    }
+    
+    .work-1text p{
+        font-size: 70%;
+    }
+
+    .bottom-text{
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .work-1text h2{
+        font-size: 100%;
+        
+    }
+    
+    .work-1text p{
+        font-size: 50%;
+    }
+}
+
+@media screen  and (min-width: 769px) {
+    .work-1{
+        width: 40%;
+    }
+
+    .work-1text h2{
+        font-size: 120%;
+        
+    }
+    
+    .work-1text p{
+        font-size: 70%;
+    }
+
+
+}
+
+@media screen and (min-width: 1100px){
     .blank{
         height: 10vw;
         font-size: 20px;
@@ -253,7 +410,26 @@ button{
         padding-bottom: 50px;
     }
 
+    .work-1text h2{
+        font-size: 170%;
+        
+    }
+    
+    .work-1text p{
+        font-size: 90%;
+    }
 
+}
+
+@media screen and (min-width: 1400px){
+    .work-1text h2{
+        font-size: 170%;
+        
+    }
+    
+    .work-1text p{
+        font-size: 110%;
+    }
 }
 
 @media screen and (min-width: 1720px){
@@ -268,6 +444,18 @@ button{
     }
     .information2 h2{
         font-size: 40px;
+    }
+    #works-button{
+        width: 30%;
+    }
+
+    .work-1text h2{
+        font-size: 200%;
+        
+    }
+    
+    .work-1text p{
+        font-size: 150%;
     }
 
 }
